@@ -1,4 +1,4 @@
-package com.lingolearn.repo;
+package com.lingolearn.repos;
 
 import com.lingolearn.entities.WordEntity;
 import com.lingolearn.enums.Difficulty;
@@ -13,45 +13,40 @@ public class WordRepository extends BaseRepository<WordEntity, Long> {
     }
 
     public List<WordEntity> findByDifficulty(Difficulty difficulty) {
-        EntityManager em = dbManager.createEntityManager();
-        try {
+        try (EntityManager em = dbManager.createEntityManager()) {
             return em.createQuery(
                             "SELECT w FROM WordEntity w WHERE w.difficulty = :difficulty",
                             WordEntity.class)
                     .setParameter("difficulty", difficulty)
                     .getResultList();
-        } finally {
-            em.close();
         }
     }
 
     public Optional<WordEntity> findByOriginalAndTranslation(String original, String translation) {
-        EntityManager em = dbManager.createEntityManager();
-        try {
+        try (EntityManager em = dbManager.createEntityManager()) {
             List<WordEntity> results = em.createQuery(
                             "SELECT w FROM WordEntity w WHERE w.original = :original AND w.translation = :translation",
                             WordEntity.class)
                     .setParameter("original", original)
                     .setParameter("translation", translation)
                     .getResultList();
-            return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
-        } finally {
-            em.close();
+            return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
         }
     }
 
     public List<WordEntity> findProblematicWords(double errorThreshold) {
-        EntityManager em = dbManager.createEntityManager();
-        try {
+        try (EntityManager em = dbManager.createEntityManager()) {
             return em.createQuery(
                             "SELECT w FROM WordEntity w " +
-                                    "WHERE (SELECT COUNT(a) FROM AnswerEntity a WHERE a.word = w AND a.correct = false) / " +
-                                    "      (SELECT COUNT(a) FROM AnswerEntity a WHERE a.word = w) > :threshold",
+                                    "WHERE w.id IN (" +
+                                    "SELECT a.word.id FROM AnswerEntity a " +
+                                    "GROUP BY a.word.id " +
+                                    "HAVING CAST(COUNT(CASE WHEN a.correct = false THEN 1 ELSE null END) AS double) / " +
+                                    "CAST(COUNT(a) AS double) > :threshold" +
+                                    ")",
                             WordEntity.class)
                     .setParameter("threshold", errorThreshold)
                     .getResultList();
-        } finally {
-            em.close();
         }
     }
 }
